--- a/static/css/style.css
+++ b/static/css/style.css
@@ -107,6 +107,16 @@ img {
     margin: 40px;
 }
 
+.game-card {
+    margin: 30px 0 30px 0;
+    border: 1px solid #fafafa;
+}
+
+#card-image {
+    height: 400px;
+    padding: 10px;
+}
+
 /* media queries */
 
 @media (max-width: 992px) {
