--- a/templates/games.html
+++ b/templates/games.html
@@ -9,18 +9,20 @@
         
     <div class="row">
         <div class="col s12 m10 l10 offset-l1 offset-m1">
-            {% for game in games %}
+            {% for game in games %}                
                 
             <div class="col s12 m6 l4">
                 <div class="card grey darken-4">
-                <div class="card-image">
-                    <img src="{{ game.game_url }}">
-                </div>
-                <div class="card-content white-text">
-                    <p>
-                        {{ game.game_title }}
-                    </p>
-                </div>
+                    <a href="{{ url_for('game', game_id=game._id) }}">
+                        <div class="card-image">
+                            <img src="{{ game.game_url }}">
+                        </div>
+                        <div class="card-content white-text">
+                            <p>
+                                {{ game.game_title }}
+                            </p>
+                        </div>
+                    </a>                        
                 </div>
             </div>    
                 
