--- a/templates/game_card.html
+++ b/templates/game_card.html
@@ -8,13 +8,79 @@
                 <img id="card-image" src="{{ game.game_url }}">
             </div>
             <div class="card-content white-text">
-                <div class="row center-align">
-                    <h3>{{ game.game_title }}</h3>
+                <div class="row ">
+                    <div class="row">
+                        <div class="col s10 m10 l10 offset-s1 offset-m1 offset-l1">
+                            <h3>{{ game.game_title }}</h3>
+                        </div>
+                    </div>
                 </div>
-            <div class="card-action">
-                <a href="#">This is a link</a>
-            </div>
+
+                <div class="row game-info">
+                    <div class="col s10 m10 l10 offset-s1 offset-m1 offset-l1">
+                        <p>
+                            {{ game.game_description }}
+                        </p>
+                    </div>
+                </div>
+
+                <div class="game-info">
+                    <div class="row">
+                        <div class="col s10 m6 l6 offset-s1 offset-m1 offset-l1 green lighten-2 light-blue lighten-3">
+                            <i class="material-icons">build</i>
+                            <p>
+                                <strong>Developers:</strong> {{ game.game_developers }}
+                            </p>
+                        </div>
+                        <div class="col s10 m4 l4 offset-s1 grey darken-1">
+                            <i class="material-icons">today</i>
+                            <p>
+                                <strong>Released: {{ game.game_released }}</strong>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col s10 m4 l4 offset-s1 offset-m1 offset-l1 deep-purple lighten-3">
+                            <i class="material-icons">person</i>
+                            <p>
+                                <strong>{{ game.num_of_players }}</strong>
+                            </p>
+                        </div>
+                        <div class="col s10 m6 l6 offset-s1 red darken-2">
+                            <i class="material-icons">extension</i>
+                            <p>
+                                <strong>Genre: {{ game.game_genre }}</strong>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col s10 m10 l10 offset-s1 offset-m1 offset-l1 light-blue lighten-3">
+                            <i class="material-icons">desktop_windows</i>
+                            <p>
+                                <strong>Platforms:</strong> {{ game.game_platforms }}
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="btn-container">
+                        <div class="card-action center-align">
+                            <a class="waves-effect waves-light btn-small" href="#">Leave a review</a>
+                        </div>    
+                    </div>                    
+                </div>           
         </div>
+    </div>
+</div>
+
+<div class="row center-align">
+    <div class="col s12">
+        <a class="btn waves-effect red darken-3 register-btn" href="{{ url_for('get_games') }}" type="submit" name="action">
+            <i class="material-icons left">arrow_back</i> Back        
+        </a>
     </div>
 </div>
 
