--- a/templates/base.html
+++ b/templates/base.html
@@ -65,6 +65,8 @@
         {% endwith %}
     </section>
 
+    <!-- main content-->
+    <main>
         {% block home_content %}
         {% endblock %}
 
@@ -72,6 +74,35 @@
         {% endblock %}
 
     </main>
+
+    <!-- foter -->
+    <footer class="page-footer red darken-3">
+        <div class="row">
+            <div class="col s12 m10 l10 offset-l1 offset-m1">
+                <div class="col s12 m6 l4">
+                    <h5 class="white-text">Contact</h5>
+                    <p class="grey-text text-lighten-4">contact@gamereview.net</p>
+                </div>
+                <div class="col s12 m6 l4"></div>
+                <div class="col s12 m6 l4">
+                    <div class="col s12">
+                        <h5 class="white-text" id="links">Links</h5>
+                    </div>
+                    <div class="col s12" id="links">
+                        <a class="grey-text text-lighten-3" href="#!"><i class="material-icons">add</i></a>
+                        <a class="grey-text text-lighten-3" href="#!"><i class="material-icons">add</i></a>
+                        <a class="grey-text text-lighten-3" href="#!"><i class="material-icons">add</i></a>
+                        <a class="grey-text text-lighten-3" href="#!"><i class="material-icons">add</i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright center-align">
+            <div class="container">
+                © 2014 Copyright Text
+            </div>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
