--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,8 +2,14 @@
     color: #fafafa;
 }
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body {
     background-color: #000000;
+    margin-bottom: 160px;
 }
 
 .flashes h4 {
@@ -61,7 +67,7 @@ p {
 }
 
 .register-btn {
-    margin: 10px;
+    margin: 15px;
 }
 
 .header {
@@ -88,6 +94,10 @@ img {
     margin: 0;
 }
 
+.card-panel {
+    border: 1px solid #fafafa;
+}
+
 .card
 .card-content {
     padding: 5px;
@@ -104,7 +114,11 @@ img {
 }
 
 .more-games-btn {
-    margin-top: 40px;
+    margin: 40px;
+}
+
+#games {
+    margin-bottom: 50px;
 }
 
 .game-card {
@@ -124,6 +138,22 @@ img {
 .btn-container
 a {
     margin: 15px;
+}
+
+.back-btn {
+    margin: 40px;
+}
+
+.switch {
+    margin: 15px;
+}
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 160px;
+    background-color: #f5f5f5;
 }
 
 .page-footer {
@@ -154,5 +184,8 @@ a {
     }
     #links {
         text-align: left;
+    }
+    #footer {
+        height: 245px;
     }
 }
