--- a/templates/game_card.html
+++ b/templates/game_card.html
@@ -8,12 +8,10 @@
                 <img id="card-image" src="{{ game.game_url }}">
             </div>
             <div class="card-content white-text">
-                <div class="row ">
-                    <div class="row">
+                <div class="row ">                    
                         <div class="col s10 m10 l10 offset-s1 offset-m1 offset-l1">
                             <h3>{{ game.game_title }}</h3>
                         </div>
-                    </div>
                 </div>
 
                 <div class="row game-info">
@@ -68,7 +66,7 @@
                 <div class="row">
                     <div class="btn-container">
                         <div class="card-action center-align">
-                            <a class="waves-effect waves-light btn-small" href="#">Leave a review</a>
+                            <a class="waves-effect waves-light btn-small" href="{{ url_for('add_review') }}">Leave a review</a>
                         </div>    
                     </div>                    
                 </div>           
@@ -76,9 +74,27 @@
     </div>
 </div>
 
+<div class="row">
+    <div class="col s12 m10 l8 offset-l2 offset-m1">
+        <h4 class="header white-text">Reviews</h4>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col s12 m10 l8 offset-l2 offset-m1">
+        <div class="card game-card grey darken-4">
+            <div class="card-content white-text">
+                <p>
+                    hi
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="row center-align">
     <div class="col s12">
-        <a class="btn waves-effect red darken-3 register-btn" href="{{ url_for('get_games') }}" type="submit" name="action">
+        <a class="btn waves-effect red darken-3 back-btn" href="{{ url_for('get_games') }}" type="submit" name="action">
             <i class="material-icons left">arrow_back</i> Back        
         </a>
     </div>
