--- a/templates/games.html
+++ b/templates/games.html
@@ -8,7 +8,7 @@
     </div>
         
     <div class="row">
-        <div class="col s12 m10 l10 offset-l1 offset-m1">
+        <div class="col s12 m10 l10 offset-l1 offset-m1" id="games">
             {% for game in games %}                
                 
             <div class="col s12 m6 l4">
