--- a/templates/index.html
+++ b/templates/index.html
@@ -154,7 +154,7 @@
         </div>
     </div>
 
-    <div class="row center-align">
+    <div class="row center-align" id="btn">
         <a href="{{ url_for('get_games') }}" class="btn waves-effect red darken-3 more-games-btn" type="submit" name="action">
             More Games
             <i class="material-icons right">send</i>
