--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h2 class="center-align">Log In</h2>
+    <div class="row">
+        <div class="col s12 m10 l8 offset-l2 offset-m1">
+            <h4 class="header white-text">Log In</h4>
+        </div>
+    </div>
 
     <div class="row">
         <form class="col s12 m10 l8 offset-m1 offset-l2" method="POST" action="{{ url_for('login') }}">
