--- a/templates/index.html
+++ b/templates/index.html
@@ -155,7 +155,7 @@
     </div>
 
     <div class="row center-align" id="btn">
-        <a href="{{ url_for('get_games') }}" class="btn waves-effect red darken-3 more-games-btn" type="submit" name="action">
+        <a href="{{ url_for('get_games') }}" class="btn waves-effect red darken-3 more-games-btn" type="submit">
             More Games
             <i class="material-icons right">send</i>
         </a>
