--- a/templates/game_card.html
+++ b/templates/game_card.html
@@ -7,6 +7,7 @@
             <div class="card-image">
                 <img id="card-image" src="{{ game.game_url }}">
             </div>
+
             <div class="card-content white-text">
                 <div class="row ">                    
                         <div class="col s10 m10 l10 offset-s1 offset-m1 offset-l1">
@@ -16,6 +17,7 @@
 
                 <div class="row game-info">
                     <div class="col s10 m10 l10 offset-s1 offset-m1 offset-l1">
+                        <h5>Game play description:</h5>
                         <p>
                             {{ game.game_description }}
                         </p>
@@ -63,13 +65,14 @@
                     </div>
                 </div>
 
+                
                 <div class="row">
-                    <div class="btn-container">
-                        <div class="card-action center-align">
-                            <a class="waves-effect waves-light btn-small" href="{{ url_for('add_review') }}">Leave a review</a>
-                        </div>    
-                    </div>                    
-                </div>           
+                    <div class="col s12 center-align">
+                        <a class="waves-effect waves-light btn modal-trigger" href="{{ url_for('add_review') }}">Leave a review</a>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
@@ -81,12 +84,10 @@
 </div>
 
 <div class="row">
-    <div class="col s12 m10 l8 offset-l2 offset-m1">
+    <div class="col s12 m10 l8 offset-l2 offset-m1">        
         <div class="card game-card grey darken-4">
             <div class="card-content white-text">
-                <p>
-                    hi
-                </p>
+                <p></p>
             </div>
         </div>
     </div>
