--- a/templates/register.html
+++ b/templates/register.html
@@ -12,7 +12,7 @@
             <div class="card-panel grey darken-4">
                 <!-- username input -->
                 <div class="row">
-                    <div class="input-field col s12">
+                    <div class="input-field col s12 m8 l8 offset-m2 offset-l2">
                         <i class="material-icons prefix white-text">person_add</i>
                         <input id="username" name="username" type="text" minlength="5" maxlength="15"
                             pattern="^[a-zA-Z0-9]{5,15}$" class="validate white-text" required>
@@ -21,7 +21,7 @@
                 </div>
                 <!-- password input -->
                 <div class="row">
-                    <div class="input-field col s12">
+                    <div class="input-field col s12 m8 l8 offset-m2 offset-l2">
                         <i class="material-icons prefix white-text">lock</i>
                         <input id="password" name="password"  type="password" minlength="5" maxlength="15"
                             pattern="^[a-zA-Z0-9]{5,15}$" class="validate white-text" required>
@@ -30,7 +30,7 @@
                 </div>
                 <!-- submit button -->
                 <div class="row center-align">
-                    <button class="btn waves-effect red darken-3" type="submit" name="action">
+                    <button class="btn waves-effect red darken-3" type="submit">
                         Register
                         <i class="material-icons right">send</i>
                     </button>
